Add AgentLoader